examples/errors/diff_in_return.jj
func f
with x 
returns x

func f
with x
when x == 0
{

}

func main 
{
    f(1);
}
